// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active 1`] = `
Object {
  "&:active": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`checked 1`] = `
Object {
  "&:checked": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`default 1`] = `
Object {
  "&:default": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`empty 1`] = `
Object {
  "&:empty": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`enabled 1`] = `
Object {
  "&:enabled": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`even 1`] = `
Object {
  "&:nth-child(even)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`evenOfType 1`] = `
Object {
  "&:nth-of-type(even)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`first 1`] = `
Object {
  "&:first-child": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`firstOfType 1`] = `
Object {
  "&:first-of-type": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`focus 1`] = `
Object {
  "&:focus": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`focusVisible 1`] = `
Object {
  "&:focus-visible": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`focusWithin 1`] = `
Object {
  "&:focus-within": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`hover 1`] = `
Object {
  "&:hover": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`indeterminate 1`] = `
Object {
  "&:indeterminate": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`invalid 1`] = `
Object {
  "&:invalid": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`last 1`] = `
Object {
  "&:last-child": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`lastOfType 1`] = `
Object {
  "&:last-of-type": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`link 1`] = `
Object {
  "&:link": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notChecked 1`] = `
Object {
  "&:not(:checked)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notDisabled 1`] = `
Object {
  "&:not(:disabled)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notFirst 1`] = `
Object {
  "&:not(:first-child)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notFirstOfType 1`] = `
Object {
  "&:not(:first-of-type)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notLast 1`] = `
Object {
  "&:not(:last-child)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notLastOfType 1`] = `
Object {
  "&:not(:last-of-type)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notOnlyChild 1`] = `
Object {
  "&:not(:only-child)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`notOnlyOfType 1`] = `
Object {
  "&:not(:only-of-type)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`odd 1`] = `
Object {
  "&:nth-child(odd)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`oddOfType 1`] = `
Object {
  "&:nth-of-type(odd)": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`onlyChild 1`] = `
Object {
  "&:only-child": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`onlyOfType 1`] = `
Object {
  "&:only-of-type": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`optional 1`] = `
Object {
  "&:optional": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`placeholderShown 1`] = `
Object {
  "&:placeholder-shown": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`readOnly 1`] = `
Object {
  "&:read-only": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`readWrite 1`] = `
Object {
  "&:read-write": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`required 1`] = `
Object {
  "&:required": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`root 1`] = `
Object {
  "&:root": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`target 1`] = `
Object {
  "&:target": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`valid 1`] = `
Object {
  "&:valid": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;

exports[`visited 1`] = `
Object {
  "&:visited": Object {
    "--w-bg-opacity": "1",
    "-webkit-background-clip": "content-box",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
  },
}
`;
